[#105569758] feature-homepage-listings: corrected z-index of member options dropdown-menu

--- a/troupon/static/css/base_styles.css
+++ b/troupon/static/css/base_styles.css
@@ -55,6 +55,7 @@ ul, ol {
 }
 
 .dropdown .dropdown-menu {
+  position: relative;
   z-index: 3000;
 }
 
